信息商标历史记录列表
git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@11713 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/internal/internal.complate.html
+++ b/App/View/internal/internal.complate.html
@@ -19,10 +19,9 @@
             <select name="uid">
                 <option value="0">其他</option>
                 <? foreach($contact as $item): ?>
-                <option value="<?=$item['uid']?>"><?=($item['name'].'('.$item['phone'].')')?></option>
+                <option value="<?=$item['id'].'|'.$item['uid']?>"><?=($item['name'].'('.$item['phone'].')')?></option>
                 <? endforeach; ?>
             </select>
-        </li>
         </li>
         <li><label> </label>
             <a href="javascript:void(0);" class="mj-liBtns" onclick="complateSale();">确定</a>
