历史记录添加商标号的搜索
git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@11715 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/internal/internal.history.html
+++ b/App/View/internal/internal.history.html
@@ -19,6 +19,8 @@
         <form name="saleSearchForm" id="saleSearchForm" action="/internal/history/" method="GET">
         <dl>
             <dd>
+		<label>商标号：</label><input type="text" name="tmNumber" value="<?=$s['tmNumber']?>" class="input input-sm"/>
+                
                 <label> 销售状态：</label>
                 <select name="type" class="input input-sm">
                     <option value="0">--请选择--</option>
