添加 静态引用变量
git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@11744 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/header.html
+++ b/App/View/header.html
@@ -3,9 +3,9 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>后台管理</title>
-    <link rel="stylesheet" href="<?=StaticDir?>1.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="<?=StaticDir?>1.2/css/import-comm.css">
-    <link rel="stylesheet" href="<?=StaticDir?>1.2/css/title.css">
+    <link rel="stylesheet" href="<?=StaticDir?>1.2/css/bootstrap.min.css?v=<?=$static_version?>">
+    <link rel="stylesheet" href="<?=StaticDir?>1.2/css/import-comm.css?v=<?=$static_version?>">
+    <link rel="stylesheet" href="<?=StaticDir?>1.2/css/title.css?v=<?=$static_version?>">
     <script type="text/javascript" src="<?=StaticDir?>js/jquery.min.js"></script>
     <script type="text/javascript" src="<?=StaticDir?>js/jquery.form.js"></script>
     <script type="text/javascript" src="<?=StaticDir?>js/laydate/laydate.js"></script>
