--- a/App/View/internal/internal.edit.html
+++ b/App/View/internal/internal.edit.html
@@ -1,5 +1,5 @@
 <? require(ViewDir.'/header.html');?>
-<link rel="stylesheet" href="<?=StaticDir?>1.2/css/details.css">
+<link rel="stylesheet" href="<?=StaticDir?>1.2/css/details.css?v=<?=$static_version?>">
 <script charset="utf-8" src="<?=StaticDir?>/editor/kindeditor.js"></script>
 <script charset="utf-8" src="<?=StaticDir?>/editor/lang/zh_CN.js"></script>
 <script>
