--- a/App/View/internal/internal.history.html
+++ b/App/View/internal/internal.history.html
@@ -1,6 +1,6 @@
 <? require(ViewDir.'/header.html');?>
 
-<link rel="stylesheet" href="<?=StaticDir?>1.2/css/main.css">
+<link rel="stylesheet" href="<?=StaticDir?>1.2/css/main.css?v=<?=$static_version?>">
 
 <div class="place">
     <span>位置：</span>
