只有 交易成功 才可以 编辑
git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@11952 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/internal/internal.history.html
+++ b/App/View/internal/internal.history.html
@@ -147,7 +147,7 @@
                         <?=$v['memo']?>
                     </td>
 		    <td>
-			<a href="javascript:;" class="btn-info" onclick="complateSale(<?=$v['id']?>)">编辑</a>	
+			<?if($v['type']==1){?><a href="javascript:;" class="btn-info" onclick="complateSale(<?=$v['id']?>)">编辑</a><?}?>	
 		    </td>
 
                 </tr>
