提交批量审核功能
git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@12121 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/internal/internal.index.html
+++ b/App/View/internal/internal.index.html
@@ -165,6 +165,9 @@
             <button class="btn btn-danger" onclick="Import();" type="button">导入商品</button>
             <? } ?>
             <button class="btn btn-info" onclick="download();" type="button" type="button">导出表格EXCEL</button>
+            <? if( in_array('37', $_role_) ){ ?>
+            <button type="button" class="btn btn-success" onclick="batchVerify();">批量审核</button>
+            <? } ?>
             <? if( in_array('2', $_role_) ){ ?>
             <button type="button" class="btn btn-info" onclick="setMoreDown();">批量下架</button>
             <? } ?>
@@ -588,6 +591,19 @@
             area: ['560px', '350px'],
 
             content: '/internal/create/'
+        });
+    }
+
+    function batchVerify()
+    {
+        layer.open({
+            type: 2,
+            title: false,
+            scrollbar: false,
+            closeBtn: false,
+            area: ['631px', '230px'],
+
+            content: '/internal/batchVerify/'
         });
     }
 	
