添加商标出售数据分析功能
git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@12344 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/visitlog/visitlog.search.html
+++ b/App/View/visitlog/visitlog.search.html
@@ -29,7 +29,7 @@
         <form name="visitlogForm" id="visitlogForm" action="/visitlog/search/" method="GET">
         <dl>
             <dd>
-               <label> 我要统计从<?=$s['dateStart']?>：</label><input type="text" name="dateStart" value="<?=$s['dateStart']?>" class="input input-sm" readonly onclick="laydate()" /> 
+               <label> 我要统计从：</label><input type="text" name="dateStart" value="<?=$s['dateStart']?>" class="input input-sm" readonly onclick="laydate()" /> 
                 <label>&nbsp;&nbsp;至&nbsp;&nbsp;</label> <input type="text" name="dateEnd" value="<?=$s['dateEnd']?>" class="input input-sm" readonly onclick="laydate()" />
                 
                 <a href="javascript:void(0);" class="mj-sBtn mj-sBtn-search" style="display:inline-block;margin-left:50px;">搜索</a>
